<resources>
    <string name="app_name">Niligo Prism</string>
    <string name="intro0_title">Plug your Prism Bulb</string>
    <string name="intro0_desc">First of all, plug your Prism bulbs.</string>
    <string name="skip">SKIP</string>
    <string name="intro1_title">Select a Profile</string>
    <string name="intro1_desc">Select or add Profile\n(ie: Home or Office)</string>
    <string name="intro2_title"><![CDATA[Turn On & Select Wifi Router]]></string>
    <string name="intro2_desc">Turn on your wireless router and set\nyour password in Prism app to\nconnect bulbs to the router.</string>
    <string name="intro3_title">Config Prism Bulbs</string>
    <string name="intro3_desc">Configure your Prism bulbs for connection\nwith your wireless router.</string>
    <string name="intro4_title">Categorize your Prism bulbs</string>
    <string name="intro4_desc"><![CDATA[Categorize your Prism bulbs in Rooms,\nBedroom, Living Room, Kitchen & ...]]></string>
    <string name="intro5_title">Stylize your Smart Prism bulbs</string>
    <string name="intro5_desc">Stylize Prism bulbs with milions of colors\nand change brightness and more!</string>
    <string name="go">OK, Let\'s go</string>
    <string name="login_google">Login with Google</string>
    <string name="or">Or</string>
    <string name="login">Sign In</string>
    <string name="new_user">New Member? Register</string>
    <string name="get_prism">Get a new Prism bulb</string>
    <string name="login_to_prism">Login to Prism</string>
    <string name="signup">Sign Up</string>
    <string name="share">Share</string>
    <string name="success_login_google">Logged In Successfully</string>
    <string name="my_profile">My Profile</string>
    <string name="configure_bulbs">Bulbs Configurations</string>
    <string name="categories_bulbs">Bulbs Categories</string>
    <string name="prism_cloud">Prism Cloud</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="send_email">Send Eamil</string>
    <string name="exit">Press Back button again to Exit.</string>
    <string name="backup">Backup your account and configuration on Prism cloud.</string>
    <string name="backup_latest">Latest:</string>
    <string name="share_desc">Share your profile to anybody in network.</string>
    <string name="restore">Restore your account and configuration from Prism cloud.</string>
    <string name="settings_tab1">Update</string>
    <string name="settings_tab2">Support</string>
    <string name="settings_tab3">Developers</string>
    <string name="reset_desc">To reset the bulbs, click the button below and bulbs of current profile will be reset to factory config.</string>
    <string name="update_desc">To update the bulbs, click the button below and bulbs of current profile will be updated on OTA.</string>
    <string name="update_desc3">Notice: All of bulbs configured in this profile will be updated.</string>
    <string name="reset_prism_bulbs">Reset Prism bulbs</string>
    <string name="update_prism_bulbs">Update Prism bulbs</string>
    <string name="drawer_open_content_desc">Open Drawer</string>
    <string name="drawer_close_content_desc">Close Drawer</string>
    <string name="permission_needed">Camera and External Storage permissions are needed.</string>
    <string name="color_picked">Picked Color</string>
    <string name="config_turnon"><![CDATA[Turn On & wait for Wifi]]></string>
    <string name="config_searching">Searching for Signal…</string>
    <string name="config_selected">Config Selected</string>
    <string name="refresh">Refresh</string>
    <string name="choose_network">Choose a Network</string>
    <string name="network_pass">Network Password</string>
    <string name="config_bulbs">Config Bulbs</string>
    <string name="config_waiting">Waiting for Bulb Config</string>
    <string name="config_waiting_desc">Please wait for bulbs to config.\nEvery bulb will turn White when it completes connecting to wifi.</string>
    <string name="done">Done</string>
    <string name="deviceDetailsNotYetAvailable">deviceDetailsNotYetAvailable</string>
    <string name="toggle_all_groups">Toggle all Groups</string>
    <string name="share_profile">Share Profile</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="create_profile">Create Profile</string>
    <string name="create">Create</string>
    <string name="schedule">Schedule</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="profiles">Profiles</string>
    <string name="add_category">Add Category</string>
    <string name="cat_example">Name exp: Living Room</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="error_empty">Field is Empty!</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="edit_bulb">Edit Bulb Name</string>
    <string name="error_unuth">You must be logged in to perform this action.</string>
    <string name="error_connection">Can not access to server. Please check your Internet connection.</string>
    <string name="success_register">You\'ve Successfully registered.</string>
    <string name="error_invalid_credentials">Invalid Username or Password.</string>
    <string name="error_weak_password">Weak Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="success_forgot_pass">Reset Password Email is Sent.</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="error_invalid_token">Invalid Token</string>
    <string name="success_invite">Invitation Sent Successfully.</string>
    <string name="success_backup">Profile backed up Successfully.</string>
    <string name="never">Never</string>
    <string name="error_profile_null">You\'ve not selected any profile yet. If you\'ve not created a profile yet please create one from Profiles page.</string>
    <string name="favorite_colors">Favorite Colors</string>
    <string name="success_fav_color">Color set added to favourites.</string>
    <string name="error_invalid_time">Invalid Time</string>
    <string name="succes_schedule">Scheduled Successfully.</string>
    <string name="error_camera_take_picture_failed">Camera failed to take picture. Please try again.</string>
    <string name="turn">Turn</string>
    <string name="at">at</string>
    <string name="current_ip">Your local IP is:</string>
    <string name="send_profile">Send Profile</string>
    <string name="send">Send</string>
    <string name="error_share_profile">Error in sending Profile.</string>
    <string name="select_profile">Please select a Profile.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="error_incorrect_pass">Wifi Password is incorrect.</string>
    <string name="error_empty_group">Group has no available bulbs</string>
</resources>
