<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <com.niligo.prism.widget.NPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_desc"
        android:id="@+id/update"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textSize="@dimen/text_normal"
        android:textColor="@android:color/white"
        android:layout_margin="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_rect1"
        android:id="@+id/update_rel"
        android:layout_below="@+id/update"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView2"
            android:src="@drawable/setting_update"
            android:padding="6dp" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_prism_bulbs"
            android:id="@+id/textView2"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>


    <com.niligo.prism.widget.NPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_rel"
        android:text="@string/reset_desc"
        android:id="@+id/reset"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textSize="@dimen/text_normal"
        android:textColor="@android:color/white"
        android:layout_margin="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_rect1"
        android:id="@+id/reset_rel"
        android:layout_below="@+id/reset"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView3"
            android:src="@drawable/setting_update"
            android:padding="6dp" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_prism_bulbs"
            android:id="@+id/textView3"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>
</RelativeLayout>
