<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="3"
    android:baselineAligned="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/backup_rel"
        android:padding="20dp"
        android:gravity="center">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView11"
            android:src="@drawable/cloud_upload" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Backup"
            android:id="@+id/textView9"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_big"
            android:textColor="@color/color9"
            android:layout_toRightOf="@+id/imageView11" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:id="@+id/textView10"
            android:textColor="@color/color1"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView9"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="10dp" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/latest"
            android:textColor="@color/color1"
            android:layout_below="@+id/textView10"
            android:layout_alignLeft="@+id/textView9"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/share_rel"
        android:padding="20dp"
        android:gravity="center">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView12"
            android:src="@drawable/cloud_send" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share"
            android:id="@+id/textView12"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_big"
            android:textColor="@color/color9"
            android:layout_toRightOf="@+id/imageView12" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_desc"
            android:id="@+id/textView13"
            android:textColor="@color/color1"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/textView12"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="10dp" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/ip"
            android:textColor="@color/color1"
            android:layout_below="@+id/textView13"
            android:layout_alignLeft="@+id/textView12"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="10dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/restore_rel"
        android:padding="20dp"
        android:gravity="center">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView13"
            android:src="@drawable/cloud_download" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restore"
            android:id="@+id/textView14"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_big"
            android:textColor="@color/color9"
            android:layout_toRightOf="@+id/imageView13" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:id="@+id/textView15"
            android:textColor="@color/color1"
            android:layout_below="@+id/textView14"
            android:layout_alignLeft="@+id/textView14"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</LinearLayout>
