<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/about_logo" />

        <com.niligo.prism.widget.NPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prism"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="206dp"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/textView">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_rel">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/icon"
                    android:layout_alignParentRight="false"
                    android:src="@drawable/login_email"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input"
                    android:hint="Enter your Email"
                    app:hintTextAppearance="@style/TextInputLayout"
                    android:layout_toRightOf="@+id/icon"
                    android:layout_marginLeft="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edittext"
                        android:layout_toRightOf="@+id/imageView9"
                        android:layout_marginLeft="15dp"
                        android:singleLine="true"
                        android:maxLength="50"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:paddingRight="10dp"
                        android:background="@android:color/transparent" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/line"
                    android:layout_below="@+id/text_input"
                    android:background="@color/color1"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_rel"
                android:layout_marginTop="35dp"
                android:id="@+id/password_rel">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/icon2"
                    android:layout_alignParentRight="false"
                    android:src="@drawable/login_password"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input2"
                    android:hint="Password"
                    app:passwordToggleEnabled="true"
                    app:hintTextAppearance="@style/TextInputLayout"
                    android:layout_toRightOf="@+id/icon2"
                    android:layout_marginLeft="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edittext2"
                        android:layout_toRightOf="@+id/imageView9"
                        android:layout_marginLeft="15dp"
                        android:singleLine="true"
                        android:maxLength="50"
                        android:textColor="@android:color/white"
                        android:paddingRight="10dp"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/line2"
                    android:layout_below="@+id/text_input2"
                    android:background="@color/color1"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_rect1"
                android:id="@+id/login"
                android:layout_below="@+id/password_rel"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView6"
                    android:src="@drawable/login_heart"
                    android:padding="6dp" />

                <com.niligo.prism.widget.NPTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:id="@+id/textView6"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_normal" />
            </RelativeLayout>

            <com.niligo.prism.widget.NPTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_prism"
                android:id="@+id/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"
                android:layout_below="@+id/login"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp" />

            <com.niligo.prism.widget.NPTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_prism"
                android:id="@+id/get_prism"
                android:textColor="@color/color1"
                android:textSize="@dimen/text_normal"
                android:layout_below="@+id/register"
                android:layout_alignParentRight="false"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imageView5"
                android:layout_below="@+id/get_prism" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
